# qrc_classification_demo

./: LICENSE  README.md  pyproject.toml  requirements-colab.txt
data/: test_X.csv  test_y.csv  train_X.csv  train_y.csv
notebooks/: qrc_timeseries_classification_colab.ipynb
scripts/: make_binary_timeseries_dataset.py
src/: __init__.py  spin_viz.py
