[project]
name = "qrc-classification-demo"
version = "0.1.0"
description = "Quantum reservoir computing demo for binary time-series classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "ipywidgets>=8.1",
    "pandas>=2.1",
]

[tool.uv]
package = false
